@@ -155,6 +155,10 @@ files.
 
       Environment variable support via "%{ENV:var}" syntax.
 
+    SQLUserInfo
+
+      Custom SQLNamedQuery for 'userset' and 'usersetfast' cases supported
+
     TLSOptions
 
       The NoSessionReuseRequired option has been added.  As of
@@ -181,4 +185,4 @@ files.
       Support for this directive has been removed.
 
    
-Last Updated: $Date: 2009-03-24 17:50:03 $
+Last Updated: $Date: 2009-03-25 05:30:05 $
